--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@
     margin-left: 10px
 }
 
+.margin_top{
+    margin-top: 30px;
+}
+
 .autor{
     margin-top:10px;
 }
@@ -85,4 +89,10 @@
 
 .row_due{
     height: 70px;
+}
+
+.to_interes{
+    margin-bottom: 5px;
+    margin-top: 5px;
+    
 }
