--- a/style.css
+++ b/style.css
@@ -3,11 +3,6 @@
     margin: 0;
 } 
 
-/* .box{
-    width: 80%;
-    margin: auto;
-} */
-
 .background{
     background-image: url(/img/pattern.png);
     background-color: rgb(78, 160, 255);
@@ -16,12 +11,15 @@
 .logo{
     height: 60px;
     margin-top: 100px;
-    margin-left: 10px;
+    margin-left: 10;
 }
 
 .margin{
     margin-top: 20px;
-    margin-left: 10px
+    margin-left: 10px;
+    text-align: center;
+    width: 80%;
+    margin: auto;
 }
 
 .margin_top{
@@ -44,9 +42,11 @@
     font-size: 10px;
     margin-bottom: 20px;
 }
+
 .illuminated{
     background-color: rgb(255, 255, 0);
 }
+
 .list{
     margin-top: 20px;
 }
@@ -77,6 +77,12 @@
 
 #margine{
     margin-top: 20px;
+}
+
+.to_interes{
+    margin-bottom: 5px;
+    margin-top: 5px;
+    
 }
 
 /* .table{
@@ -121,8 +127,3 @@
     height: 70px;
 } */
 
-.to_interes{
-    margin-bottom: 5px;
-    margin-top: 5px;
-    
-}
